--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Second line.</code></pre>
 					<a href="#" class="button icon-arrow-expand feature" data-feature="fullscreen" data-tofocus="markdown" title="Go fullscreen"></a>
 					<div class="clear"></div>
 				</div>
-				<textarea id="markdown" class="full-height" placeholder="Write Markdown">Minimalist Online Markdown Editor
+				<textarea id="markdown" dir="auto" class="full-height" placeholder="Write Markdown">Minimalist Online Markdown Editor
 =================================
 
 This is the **simplest** and **slickest** online Markdown editor.  
@@ -127,8 +127,8 @@ Just start typing in the left panel.
 					<a href="#" class="button icon-arrow-expand feature" data-feature="fullscreen" data-tofocus="" title="Go fullscreen"></a><!-- data-tofocus is set dynamically by the HTML/preview switch -->
 					<div class="clear"></div>
 				</div>
-				<textarea id="html" class="full-height"></textarea>
-				<div id="preview" class="full-height"></div>
+				<textarea id="html" dir="auto" class="full-height"></textarea>
+				<div id="preview" dir="auto" class="full-height"></div>
 			</div>
 		</div>
 		<div class="clear"></div>
